fix product search api and return more details from login controller